# sdlk

./: .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  License.txt  PKGBUILD  README.md  build.sh  create-release.sh  create_release.sh  install  install.sh  vcpkg.json
.github/workflows/: aur-publish.yml  ci.yml
.templates/: PKGBUILD.in  create-release.sh.in  install.sh.in  sdlkConfig.hpp.in
PKGBUILD/lib/: PKGBUILD  PKGBUILD.in
cmake/: FindSDL2_ttf.cmake  FindSdlk.cmake  sdlkConfig.cmake.in
example/: CMakeLists.txt  configure.sh  main.cpp  run.sh
examples/: CMakeLists.txt  main.cpp
include/KHR/: khrplatform.h
include/glad/: glad.h
include/sdlk/: sdlk.hpp  sdlkConfig.hpp
include/sdlk/components/: div.hpp  image.hpp  square.hpp  text.hpp
include/sdlk/core/: app.hpp  box.hpp  camera.hpp  component.hpp  converter.hpp  freetype_font.hpp  jsx.hpp  opengl_utils.hpp  properties.hpp  quad.hpp  renderable.hpp  sdl_resource_wrapper.hpp  sdlk.hpp  shape.hpp  texture.hpp  textured_component.hpp  transformation.hpp  types.hpp  window.hpp
include/sdlk/core/events/: event_listener.hpp  observer.hpp  types.hpp
include/sdlk/core/preprocessor/: data_definition.hpp  getter_setter.hpp
include/sdlk/core/properties/: position.hpp  size.hpp
include/sdlk/utils/: basic_wrapper.hpp  check.hpp
release_config/: create_release.sh
sources/: CMakeLists.txt  sdlk.cpp
sources/components/: image.cpp  text.cpp
sources/core/: app.cpp  box.cpp  camera.cpp  colored_shape.cpp  component.cpp  converter.cpp  converter.cpp.cpp  freetype_font.cpp  glad.cpp  image_shape.cpp  jsx.cpp  opengl_utils.cpp  polygon_shape.cpp  quad.cpp  renderable.cpp  shape.cpp  static_resource.cpp  static_resource.hpp  text_shape.cpp  texture.cpp  textured_component.cpp  textured_shape.cpp  transformation.cpp  types.cpp  utils.cpp  utils.hpp  window.cpp
sources/core/events/: event_listener.cpp  observer.cpp
sources/core/shaders/: fragment.glsl  vertex.glsl
sources/utils/: basic_wrapper.cpp
src/: CMakeLists.txt  app.cpp  sdlk.cpp  types.cpp  utils.cpp  window.cpp
src/components/: component.cpp  component.event.cpp  component_event.cpp  component_handler.cpp  window.cpp
src/core/: CMakeLists.txt  app.cpp  box.cpp  renderable.cpp  sdlk.cpp  window.cpp
src/core/properties/: position.cpp  size.cpp
src/events/: componentEvent.cpp  event.cpp  mouse.cpp  mouseEvent.cpp  windowEvent.cpp
src/include/: app.hpp  error.hpp  exit.hpp  program.hpp  sdlk.hpp  types.hpp  utils.hpp  window.hpp
src/include/components/: box.hpp  component.hpp  window.hpp
src/include/events/: componentEvent.hpp  event.hpp  eventHandled.hpp  mouse.hpp  mouseEvent.hpp  windowEvent.hpp
src/include/types/: attribute.hpp  attribute.lib.hpp  position.hpp  rgb.hpp  size.hpp  style.hpp  visibility.hpp
src/include/utils/: check.hpp  program.hpp  utils.hpp
src/lib/: CMakeLists.txt  sdlk.cpp
src/lib/components/: div.cpp  image.cpp  square.cpp  text.cpp
src/lib/core/: app.cpp  box.cpp  component.cpp  renderable.cpp  textured_component.cpp  window.cpp
src/lib/core/events/: event_listener.cpp  observer.cpp
src/lib/core/properties/: position.cpp  size.cpp
src/lib/utils/: basic_wrapper.cpp
src/types/: position.cpp  rgb.cpp  size.cpp  style.cpp
src/utils/: Rgb.cpp  event.cpp  eventHandled.cpp  exit.cpp  mouseEvent.cpp  program.cpp  utils.cpp  windowEvent.cpp
tests/: CMakeLists.txt
tests/core/: jsx_test.cpp
